--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@clerk/nextjs": "^4.21.25",
+    "@clerk/themes": "^1.7.9",
     "@uploadthing/react": "^5.2.0",
     "mongoose": "^7.3.4",
     "next": "13.4.10",
