--- a/package.json
+++ b/package.json
@@ -12,11 +12,15 @@
     "@clerk/nextjs": "^4.21.25",
     "@clerk/themes": "^1.7.9",
     "@uploadthing/react": "^5.2.0",
+    "class-variance-authority": "^0.7.0",
+    "clsx": "^2.0.0",
+    "lucide-react": "^0.292.0",
     "mongoose": "^7.3.4",
     "next": "13.4.10",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "svix": "^1.7.0",
+    "tailwind-merge": "^2.0.0",
     "tailwindcss-animate": "^1.0.7",
     "uploadthing": "^5.2.0"
   },
