--- a/package.json
+++ b/package.json
@@ -11,6 +11,9 @@
   "dependencies": {
     "@clerk/nextjs": "^4.21.25",
     "@clerk/themes": "^1.7.9",
+    "@hookform/resolvers": "^3.3.2",
+    "@radix-ui/react-label": "^2.0.2",
+    "@radix-ui/react-slot": "^1.0.2",
     "@uploadthing/react": "^5.2.0",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.0.0",
@@ -19,10 +22,12 @@
     "next": "13.4.10",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-hook-form": "^7.48.2",
     "svix": "^1.7.0",
     "tailwind-merge": "^2.0.0",
     "tailwindcss-animate": "^1.0.7",
-    "uploadthing": "^5.2.0"
+    "uploadthing": "^5.2.0",
+    "zod": "^3.22.4"
   },
   "devDependencies": {
     "@types/node": "20.4.2",
